// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DashboardLayoutBuilder .addSection() should add a section to the end of the layout by default: after 1`] = `
Object {
  "sections": Array [
    Object {
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
    Object {
      "header": Object {
        "title": "Added section",
      },
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder .addSection() should add a section to the end of the layout by default: before 1`] = `
Object {
  "sections": Array [
    Object {
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder .addSection() should add a section to the provided index: after 1`] = `
Object {
  "sections": Array [
    Object {
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
    Object {
      "header": Object {
        "title": "Added section",
      },
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
    Object {
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder .addSection() should add a section to the provided index: before 1`] = `
Object {
  "sections": Array [
    Object {
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
    Object {
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder .modifySection() should modify the section: after 1`] = `
Object {
  "sections": Array [
    Object {
      "header": Object {
        "title": "Modified section",
      },
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder .modifySection() should modify the section: before 1`] = `
Object {
  "sections": Array [
    Object {
      "header": Object {
        "title": "Original section",
      },
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder .modifySection() should throw error, when the section at provided index does not exist 1`] = `"Cannot modify the section - section at index 0 does not exist!"`;

exports[`DashboardLayoutBuilder .modifySections() should modify all sections by default: after 1`] = `
Object {
  "sections": Array [
    Object {
      "header": Object {
        "title": "Modified section 0",
      },
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
    Object {
      "header": Object {
        "title": "Modified section 1",
      },
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder .modifySections() should modify all sections by default: before 1`] = `
Object {
  "sections": Array [
    Object {
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
    Object {
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder .modifySections() should modify selected section only: after 1`] = `
Object {
  "sections": Array [
    Object {
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
    Object {
      "header": Object {
        "title": "Modified section",
      },
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
    Object {
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder .modifySections() should modify selected section only: before 1`] = `
Object {
  "sections": Array [
    Object {
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
    Object {
      "header": Object {
        "title": "Original section",
      },
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
    Object {
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder .modifySections() should modify selected sections only: after 1`] = `
Object {
  "sections": Array [
    Object {
      "header": Object {
        "title": "Modified section 0",
      },
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
    Object {
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
    Object {
      "header": Object {
        "title": "Modified section 2",
      },
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
    Object {
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder .modifySections() should modify selected sections only: before 1`] = `
Object {
  "sections": Array [
    Object {
      "header": Object {
        "title": "Original section",
      },
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
    Object {
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
    Object {
      "header": Object {
        "title": "Original section",
      },
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
    Object {
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder .modifySections() should not modify any section, when selection result is undefined: after 1`] = `
Object {
  "sections": Array [
    Object {
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder .modifySections() should not modify any section, when selection result is undefined: before 1`] = `
Object {
  "sections": Array [
    Object {
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder .moveSection() should move the section: after 1`] = `
Object {
  "sections": Array [
    Object {
      "header": Object {
        "title": "Row 1",
      },
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
    Object {
      "header": Object {
        "title": "Row 0",
      },
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
    Object {
      "header": Object {
        "title": "Row 2",
      },
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder .moveSection() should move the section: before 1`] = `
Object {
  "sections": Array [
    Object {
      "header": Object {
        "title": "Row 0",
      },
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
    Object {
      "header": Object {
        "title": "Row 1",
      },
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
    Object {
      "header": Object {
        "title": "Row 2",
      },
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder .moveSection() should throw error, when the section at provided index does not exist 1`] = `"Cannot move the section - section at index 0 does not exist!"`;

exports[`DashboardLayoutBuilder .removeSection() should remove the section from the layout: after 1`] = `
Object {
  "sections": Array [],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder .removeSection() should remove the section from the layout: before 1`] = `
Object {
  "sections": Array [
    Object {
      "header": Object {
        "title": "Row to remove",
      },
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder .removeSection() should throw error, when the section at provided index does not exist 1`] = `"Cannot remove the section - section at index 0 does not exist!"`;

exports[`DashboardLayoutBuilder .removeSections() should not remove any section, when selection result is undefined: after 1`] = `
Object {
  "sections": Array [
    Object {
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder .removeSections() should not remove any section, when selection result is undefined: before 1`] = `
Object {
  "sections": Array [
    Object {
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder .removeSections() should remove all sections by default: after 1`] = `
Object {
  "sections": Array [],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder .removeSections() should remove all sections by default: before 1`] = `
Object {
  "sections": Array [
    Object {
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
    Object {
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder .removeSections() should remove selected section only: after 1`] = `
Object {
  "sections": Array [
    Object {
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
    Object {
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder .removeSections() should remove selected section only: before 1`] = `
Object {
  "sections": Array [
    Object {
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
    Object {
      "header": Object {
        "title": "Row to remove",
      },
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
    Object {
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder .removeSections() should remove selected sections only: after 1`] = `
Object {
  "sections": Array [
    Object {
      "header": Object {
        "title": "Row to keep 1",
      },
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
    Object {
      "header": Object {
        "title": "Row to keep 2",
      },
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder .removeSections() should remove selected sections only: before 1`] = `
Object {
  "sections": Array [
    Object {
      "header": Object {
        "title": "Row to keep 1",
      },
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
    Object {
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
    Object {
      "header": Object {
        "title": "Row to keep 2",
      },
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
    Object {
      "items": Array [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder .size() should update size by callback 1`] = `
Object {
  "sections": Array [],
  "size": Object {
    "gridWidth": 12,
    "heightAsRatio": 50,
  },
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder .size() should update size by callback returning undefined 1`] = `
Object {
  "sections": Array [],
  "size": undefined,
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder .size() should update size by undefined 1`] = `
Object {
  "sections": Array [],
  "size": undefined,
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder .size() should update size by value 1`] = `
Object {
  "sections": Array [],
  "size": Object {
    "gridWidth": 12,
    "heightAsRatio": 50,
  },
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder constructors .for() should throw error, when the layout is damaged 1`] = `"Provided data must be IDashboardLayout!"`;

exports[`DashboardLayoutBuilder constructors .forNewLayout() should create new empty layout 1`] = `
Object {
  "sections": Array [],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder should remove all items with kpi widget: after 1`] = `
Object {
  "sections": Array [
    Object {
      "items": Array [
        Object {
          "size": Object {
            "xl": Object {
              "gridWidth": 12,
              "heightAsRatio": 50,
            },
          },
          "type": "IDashboardLayoutItem",
          "widget": Object {
            "description": "",
            "drills": Array [],
            "ignoreDashboardFilters": Array [],
            "insight": Object {
              "identifier": "insightRef",
            },
            "ref": Object {
              "identifier": "insightWidget",
            },
            "title": "Insight widget",
            "type": "insight",
          },
        },
      ],
      "type": "IDashboardLayoutSection",
    },
    Object {
      "items": Array [
        Object {
          "size": Object {
            "xl": Object {
              "gridWidth": 12,
              "heightAsRatio": 50,
            },
          },
          "type": "IDashboardLayoutItem",
          "widget": Object {
            "description": "",
            "drills": Array [],
            "ignoreDashboardFilters": Array [],
            "insight": Object {
              "identifier": "insightRef",
            },
            "ref": Object {
              "identifier": "insightWidget",
            },
            "title": "Insight widget",
            "type": "insight",
          },
        },
      ],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder should remove all items with kpi widget: before 1`] = `
Object {
  "sections": Array [
    Object {
      "items": Array [
        Object {
          "size": Object {
            "xl": Object {
              "gridWidth": 12,
              "heightAsRatio": 50,
            },
          },
          "type": "IDashboardLayoutItem",
          "widget": Object {
            "description": "",
            "drills": Array [],
            "ignoreDashboardFilters": Array [],
            "insight": Object {
              "identifier": "insightRef",
            },
            "ref": Object {
              "identifier": "insightWidget",
            },
            "title": "Insight widget",
            "type": "insight",
          },
        },
        Object {
          "size": Object {
            "xl": Object {
              "gridWidth": 12,
              "heightAsRatio": 50,
            },
          },
          "type": "IDashboardLayoutItem",
          "widget": Object {
            "description": "",
            "drills": Array [],
            "ignoreDashboardFilters": Array [],
            "kpi": Object {
              "comparisonType": "none",
              "metric": Object {
                "identifier": "measure",
              },
            },
            "ref": Object {
              "identifier": "kpiWidget",
            },
            "title": "Kpi widget",
            "type": "kpi",
          },
        },
      ],
      "type": "IDashboardLayoutSection",
    },
    Object {
      "items": Array [
        Object {
          "size": Object {
            "xl": Object {
              "gridWidth": 12,
              "heightAsRatio": 50,
            },
          },
          "type": "IDashboardLayoutItem",
          "widget": Object {
            "description": "",
            "drills": Array [],
            "ignoreDashboardFilters": Array [],
            "kpi": Object {
              "comparisonType": "none",
              "metric": Object {
                "identifier": "measure",
              },
            },
            "ref": Object {
              "identifier": "kpiWidget",
            },
            "title": "Kpi widget",
            "type": "kpi",
          },
        },
      ],
      "type": "IDashboardLayoutSection",
    },
    Object {
      "items": Array [
        Object {
          "size": Object {
            "xl": Object {
              "gridWidth": 12,
              "heightAsRatio": 50,
            },
          },
          "type": "IDashboardLayoutItem",
          "widget": Object {
            "description": "",
            "drills": Array [],
            "ignoreDashboardFilters": Array [],
            "insight": Object {
              "identifier": "insightRef",
            },
            "ref": Object {
              "identifier": "insightWidget",
            },
            "title": "Insight widget",
            "type": "insight",
          },
        },
      ],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder should resize items with particular insight: after 1`] = `
Object {
  "sections": Array [
    Object {
      "items": Array [
        Object {
          "size": Object {
            "xl": Object {
              "gridWidth": 2,
              "heightAsRatio": 25,
            },
          },
          "type": "IDashboardLayoutItem",
          "widget": Object {
            "description": "",
            "drills": Array [],
            "ignoreDashboardFilters": Array [],
            "insight": Object {
              "identifier": "tableInsight",
            },
            "ref": Object {
              "identifier": "widget1",
            },
            "title": "Table widget",
            "type": "insight",
          },
        },
        Object {
          "size": Object {
            "xl": Object {
              "gridWidth": 12,
              "heightAsRatio": 50,
            },
          },
          "type": "IDashboardLayoutItem",
          "widget": Object {
            "description": "",
            "drills": Array [],
            "ignoreDashboardFilters": Array [],
            "insight": Object {
              "identifier": "barInsight",
            },
            "ref": Object {
              "identifier": "widget2",
            },
            "title": "Bar widget",
            "type": "insight",
          },
        },
        Object {
          "size": Object {
            "xl": Object {
              "gridWidth": 12,
              "heightAsRatio": 50,
            },
          },
          "type": "IDashboardLayoutItem",
          "widget": Object {
            "description": "",
            "drills": Array [],
            "ignoreDashboardFilters": Array [],
            "insight": Object {
              "identifier": "columnInsight",
            },
            "ref": Object {
              "identifier": "widget3",
            },
            "title": "Column widget",
            "type": "insight",
          },
        },
      ],
      "type": "IDashboardLayoutSection",
    },
    Object {
      "items": Array [
        Object {
          "size": Object {
            "xl": Object {
              "gridWidth": 2,
              "heightAsRatio": 25,
            },
          },
          "type": "IDashboardLayoutItem",
          "widget": Object {
            "description": "",
            "drills": Array [],
            "ignoreDashboardFilters": Array [],
            "insight": Object {
              "identifier": "tableInsight",
            },
            "ref": Object {
              "identifier": "widget4",
            },
            "title": "Table widget 2",
            "type": "insight",
          },
        },
      ],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder should resize items with particular insight: before 1`] = `
Object {
  "sections": Array [
    Object {
      "items": Array [
        Object {
          "size": Object {
            "xl": Object {
              "gridWidth": 12,
              "heightAsRatio": 50,
            },
          },
          "type": "IDashboardLayoutItem",
          "widget": Object {
            "description": "",
            "drills": Array [],
            "ignoreDashboardFilters": Array [],
            "insight": Object {
              "identifier": "tableInsight",
            },
            "ref": Object {
              "identifier": "widget1",
            },
            "title": "Table widget",
            "type": "insight",
          },
        },
        Object {
          "size": Object {
            "xl": Object {
              "gridWidth": 12,
              "heightAsRatio": 50,
            },
          },
          "type": "IDashboardLayoutItem",
          "widget": Object {
            "description": "",
            "drills": Array [],
            "ignoreDashboardFilters": Array [],
            "insight": Object {
              "identifier": "barInsight",
            },
            "ref": Object {
              "identifier": "widget2",
            },
            "title": "Bar widget",
            "type": "insight",
          },
        },
        Object {
          "size": Object {
            "xl": Object {
              "gridWidth": 12,
              "heightAsRatio": 50,
            },
          },
          "type": "IDashboardLayoutItem",
          "widget": Object {
            "description": "",
            "drills": Array [],
            "ignoreDashboardFilters": Array [],
            "insight": Object {
              "identifier": "columnInsight",
            },
            "ref": Object {
              "identifier": "widget3",
            },
            "title": "Column widget",
            "type": "insight",
          },
        },
      ],
      "type": "IDashboardLayoutSection",
    },
    Object {
      "items": Array [
        Object {
          "size": Object {
            "xl": Object {
              "gridWidth": 12,
              "heightAsRatio": 50,
            },
          },
          "type": "IDashboardLayoutItem",
          "widget": Object {
            "description": "",
            "drills": Array [],
            "ignoreDashboardFilters": Array [],
            "insight": Object {
              "identifier": "tableInsight",
            },
            "ref": Object {
              "identifier": "widget4",
            },
            "title": "Table widget 2",
            "type": "insight",
          },
        },
      ],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;
